--- a/config.json
+++ b/config.json
@@ -3,24 +3,32 @@
         "end_devices_count" : "2",
         "broker_ip" : "192.169.1.104"
     },
-    "end_devices" : {
-        "end1":{
+    "end_devices" : [
+        {
+            "name" : "end1",
             "ip":"192.168.1.104",
-            "modules":{
-                "1" : {
+            "modules": [
+                {
+                    "name" : "1",
                     "type" : "camera",
-                    "specifications" : ""
+                    "specifications" : "",
+                    "topic" : "camera1"
+                },
+                {
+                    "topic" : "extra topic"
                 }
-            }
+            ]
         },
-        "end2":{
+        {
+            "name": "end2",
             "ip" : "192.168.1.103",
-            "modules":{
-                "1" : {
+            "modules": [
+                {
+                    "name" : "1",
                     "type" : "thermocouple",
                     "specifications" : "" 
                 }
-            }
+            ]
         }
-    }
+    ]
 }
